@@ -5,15 +5,17 @@ import java.util.Objects;
 
 import javafx.util.Pair;
 
-import org.jabref.gui.Globals;
 import org.jabref.logic.exporter.ExporterFactory;
 import org.jabref.logic.importer.ImportFormatReader;
 import org.jabref.logic.l10n.Localization;
-import org.jabref.logic.util.OS;
+import org.jabref.logic.os.OS;
+import org.jabref.logic.preferences.CliPreferences;
+import org.jabref.logic.util.BuildInfo;
+import org.jabref.model.entry.BibEntryTypesManager;
 import org.jabref.model.strings.StringUtil;
 import org.jabref.model.util.DummyFileUpdateMonitor;
-import org.jabref.preferences.PreferencesService;
 
+import com.airhacks.afterburner.injection.Injector;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.DefaultParser;
 import org.apache.commons.cli.HelpFormatter;
@@ -31,13 +33,12 @@ public class JabRefCLI {
 
     public JabRefCLI(String[] args) throws ParseException {
         Options options = getOptions();
-
         this.cl = new DefaultParser().parse(options, args, true);
         this.leftOver = cl.getArgList();
     }
 
     public static String getExportMatchesSyntax() {
-        return String.format("[%s]searchTerm,outputFile:%s[,%s]",
+        return "[%s]searchTerm,outputFile:%s[,%s]".formatted(
                 Localization.lang("field"),
                 Localization.lang("file"),
                 Localization.lang("exportFormat"));
@@ -151,22 +152,30 @@ public class JabRefCLI {
         return cl.hasOption("automaticallySetFileLinks");
     }
 
-    public boolean isWriteXMPtoPdf() {
-        return cl.hasOption("writeXMPtoPdf");
+    public boolean isWriteXmpToPdf() {
+        return cl.hasOption("writeXmpToPdf");
     }
 
-    public boolean isEmbeddBibfileInPdf() {
-        return cl.hasOption("embeddBibfileInPdf");
+    public boolean isEmbedBibFileInPdf() {
+        return cl.hasOption("embedBibFileInPdf");
     }
 
-    public boolean isWriteMetadatatoPdf() {
-        return cl.hasOption("writeMetadatatoPdf");
+    public boolean isWriteMetadataToPdf() {
+        return cl.hasOption("writeMetadataToPdf");
     }
 
-    public String getWriteMetadatatoPdf() {
-        return cl.hasOption("writeMetadatatoPdf") ? cl.getOptionValue("writeMetadatatoPdf") :
-                cl.hasOption("writeXMPtoPdf") ? cl.getOptionValue("writeXMPtoPdf") :
+    public String getWriteMetadataToPdf() {
+        return cl.hasOption("writeMetadatatoPdf") ? cl.getOptionValue("writeMetadataToPdf") :
+                cl.hasOption("writeXMPtoPdf") ? cl.getOptionValue("writeXmpToPdf") :
                         cl.hasOption("embeddBibfileInPdf") ? cl.getOptionValue("embeddBibfileInPdf") : null;
+    }
+
+    public String getJumpToKey() {
+        return cl.getOptionValue("jumpToKey");
+    }
+
+    public boolean isJumpToKey() {
+        return cl.hasOption("jumpToKey");
     }
 
     private static Options getOptions() {
@@ -181,13 +190,10 @@ public class JabRefCLI {
         options.addOption("v", "version", false, Localization.lang("Display version"));
         options.addOption(null, "debug", false, Localization.lang("Show debug level messages"));
 
-        // The "-console" option is handled by the install4j launcher
-        options.addOption(null, "console", false, Localization.lang("Show console output (only when the launcher is used)"));
-
         options.addOption(Option
                 .builder("i")
                 .longOpt("import")
-                .desc(String.format("%s: '%s'", Localization.lang("Import file"), "-i library.bib"))
+                .desc("%s: '%s'".formatted(Localization.lang("Import file"), "-i library.bib"))
                 .hasArg()
                 .argName("FILE[,FORMAT]")
                 .build());
@@ -203,7 +209,7 @@ public class JabRefCLI {
         options.addOption(Option
                 .builder("ib")
                 .longOpt("importBibtex")
-                .desc(String.format("%s: '%s'", Localization.lang("Import BibTeX"), "-ib @article{entry}"))
+                .desc("%s: '%s'".formatted(Localization.lang("Import BibTeX"), "-ib @article{entry}"))
                 .hasArg()
                 .argName("BIBTEXT_STRING")
                 .build());
@@ -211,7 +217,7 @@ public class JabRefCLI {
         options.addOption(Option
                 .builder("o")
                 .longOpt("output")
-                .desc(String.format("%s: '%s'", Localization.lang("Export an input to a file"), "-i db.bib -o db.htm,html"))
+                .desc("%s: '%s'".formatted(Localization.lang("Export an input to a file"), "-i db.bib -o db.htm,html"))
                 .hasArg()
                 .argName("FILE[,FORMAT]")
                 .build());
@@ -219,7 +225,7 @@ public class JabRefCLI {
         options.addOption(Option
                 .builder("m")
                 .longOpt("exportMatches")
-                .desc(String.format("%s: '%s'", Localization.lang("Matching"), "-i db.bib -m author=Newton,search.htm,html"))
+                .desc("%s: '%s'".formatted(Localization.lang("Matching"), "-i db.bib -m author=Newton,search.htm,html"))
                 .hasArg()
                 .argName("QUERY,FILE[,FORMAT]")
                 .build());
@@ -227,7 +233,7 @@ public class JabRefCLI {
         options.addOption(Option
                 .builder("f")
                 .longOpt("fetch")
-                .desc(String.format("%s: '%s'", Localization.lang("Run fetcher"), "-f Medline/PubMed:cancer"))
+                .desc("%s: '%s'".formatted(Localization.lang("Run fetcher"), "-f Medline/PubMed:cancer"))
                 .hasArg()
                 .argName("FETCHER:QUERY")
                 .build());
@@ -235,7 +241,7 @@ public class JabRefCLI {
         options.addOption(Option
                 .builder("a")
                 .longOpt("aux")
-                .desc(String.format("%s: '%s'", Localization.lang("Sublibrary from AUX to BibTeX"), "-a thesis.aux,new.bib"))
+                .desc("%s: '%s'".formatted(Localization.lang("Sublibrary from AUX to BibTeX"), "-a thesis.aux,new.bib"))
                 .hasArg()
                 .argName("FILE[.aux],FILE[.bib] FILE")
                 .build());
@@ -243,7 +249,7 @@ public class JabRefCLI {
         options.addOption(Option
                 .builder("x")
                 .longOpt("prexp")
-                .desc(String.format("%s: '%s'", Localization.lang("Export preferences to a file"), "-x prefs.xml"))
+                .desc("%s: '%s'".formatted(Localization.lang("Export preferences to a file"), "-x prefs.xml"))
                 .hasArg()
                 .argName("[FILE]")
                 .build());
@@ -251,7 +257,7 @@ public class JabRefCLI {
         options.addOption(Option
                 .builder("p")
                 .longOpt("primp")
-                .desc(String.format("%s: '%s'", Localization.lang("Import preferences from a file"), "-p prefs.xml"))
+                .desc("%s: '%s'".formatted(Localization.lang("Import preferences from a file"), "-p prefs.xml"))
                 .hasArg()
                 .argName("[FILE]")
                 .build());
@@ -259,33 +265,41 @@ public class JabRefCLI {
         options.addOption(Option
                 .builder("d")
                 .longOpt("prdef")
-                .desc(String.format("%s: '%s'", Localization.lang("Reset preferences"), "-d mainFontSize,newline' or '-d all"))
+                .desc("%s: '%s'".formatted(Localization.lang("Reset preferences"), "-d mainFontSize,newline' or '-d all"))
                 .hasArg()
                 .argName("KEY1[,KEY2][,KEYn] | all")
                 .build());
 
         options.addOption(Option
                 .builder()
-                .longOpt("writeXMPtoPdf")
-                .desc(String.format("%s: '%s'", Localization.lang("Write BibTeXEntry as XMP metadata to PDF."), "-w pathToMyOwnPaper.pdf"))
+                .longOpt("writeXmpToPdf")
+                .desc("%s: '%s'".formatted(Localization.lang("Write BibTeX as XMP metadata to PDF."), "-w pathToMyOwnPaper.pdf"))
                 .hasArg()
                 .argName("CITEKEY1[,CITEKEY2][,CITEKEYn] | PDF1[,PDF2][,PDFn] | all")
                 .build());
 
         options.addOption(Option
                 .builder()
-                .longOpt("embeddBibfileInPdf")
-                .desc(String.format("%s: '%s'", Localization.lang("Embed BibTeXEntry in PDF."), "-w pathToMyOwnPaper.pdf"))
+                .longOpt("embedBibFileInPdf")
+                .desc("%s: '%s'".formatted(Localization.lang("Embed BibTeX as attached file in PDF."), "-w pathToMyOwnPaper.pdf"))
                 .hasArg()
                 .argName("CITEKEY1[,CITEKEY2][,CITEKEYn] | PDF1[,PDF2][,PDFn] | all")
                 .build());
 
         options.addOption(Option
                 .builder("w")
-                .longOpt("writeMetadatatoPdf")
-                .desc(String.format("%s: '%s'", Localization.lang("Write BibTeXEntry as metadata to PDF."), "-w pathToMyOwnPaper.pdf"))
+                .longOpt("writeMetadataToPdf")
+                .desc("%s: '%s'".formatted(Localization.lang("Write BibTeX to PDF (XMP and embedded)"), "-w pathToMyOwnPaper.pdf"))
                 .hasArg()
                 .argName("CITEKEY1[,CITEKEY2][,CITEKEYn] | PDF1[,PDF2][,PDFn] | all")
+                .build());
+
+        options.addOption(Option
+                .builder("j")
+                .longOpt("jumpToKey")
+                .desc("%s: '%s'".formatted(Localization.lang("Jump to the entry of the given citation key."), "-j key"))
+                .hasArg()
+                .argName("CITATIONKEY")
                 .build());
 
         return options;
@@ -295,29 +309,31 @@ public class JabRefCLI {
         System.out.println(getVersionInfo());
     }
 
-    public static void printUsage(PreferencesService preferencesService) {
+    public static void printUsage(CliPreferences preferences) {
         String header = "";
 
         ImportFormatReader importFormatReader = new ImportFormatReader(
-                preferencesService.getImporterPreferences(),
-                preferencesService.getImportFormatPreferences(),
-                new DummyFileUpdateMonitor());
+                preferences.getImporterPreferences(),
+                preferences.getImportFormatPreferences(),
+                preferences.getCitationKeyPatternPreferences(),
+                new DummyFileUpdateMonitor()
+        );
         List<Pair<String, String>> importFormats = importFormatReader
                 .getImportFormats().stream()
                 .map(format -> new Pair<>(format.getName(), format.getId()))
                 .toList();
         String importFormatsIntro = Localization.lang("Available import formats");
-        String importFormatsList = String.format("%s:%n%s%n", importFormatsIntro, alignStringTable(importFormats));
+        String importFormatsList = "%s:%n%s%n".formatted(importFormatsIntro, alignStringTable(importFormats));
 
         ExporterFactory exporterFactory = ExporterFactory.create(
-                preferencesService,
-                Globals.entryTypesManager);
+                preferences,
+                Injector.instantiateModelOrService(BibEntryTypesManager.class));
         List<Pair<String, String>> exportFormats = exporterFactory
                 .getExporters().stream()
                 .map(format -> new Pair<>(format.getName(), format.getId()))
                 .toList();
         String outFormatsIntro = Localization.lang("Available export formats");
-        String outFormatsList = String.format("%s:%n%s%n", outFormatsIntro, alignStringTable(exportFormats));
+        String outFormatsList = "%s:%n%s%n".formatted(outFormatsIntro, alignStringTable(exportFormats));
 
         String footer = '\n' + importFormatsList + outFormatsList + "\nPlease report issues at https://github.com/JabRef/jabref/issues.";
 
@@ -326,7 +342,8 @@ public class JabRefCLI {
     }
 
     private String getVersionInfo() {
-        return String.format("JabRef %s", Globals.BUILD_INFO.version);
+        BuildInfo buildInfo = Injector.instantiateModelOrService(BuildInfo.class);
+        return "JabRef %s".formatted(buildInfo.version);
     }
 
     public List<String> getLeftOver() {
@@ -353,26 +370,5 @@ public class JabRefCLI {
         }
 
         return sb.toString();
-    }
-
-    /**
-     * Creates and wraps a multi-line and colon-seperated string from a List of Strings.
-     */
-    protected static String wrapStringList(List<String> list, int firstLineIndentation) {
-        StringBuilder builder = new StringBuilder();
-        int lastBreak = -firstLineIndentation;
-
-        for (String line : list) {
-            if (((builder.length() + 2 + line.length()) - lastBreak) > WIDTH) {
-                builder.append(",\n");
-                lastBreak = builder.length();
-                builder.append(WRAPPED_LINE_PREFIX);
-            } else if (builder.length() > 0) {
-                builder.append(", ");
-            }
-            builder.append(line);
-        }
-
-        return builder.toString();
     }
 }
