@@ -2,6 +2,7 @@ package org.jabref.logic.importer.fetcher;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
@@ -27,15 +28,15 @@ import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.identifier.ArXivIdentifier;
 import org.jabref.model.entry.identifier.DOI;
 import org.jabref.model.entry.types.StandardEntryType;
+import org.jabref.model.strings.StringUtil;
 
-import kong.unirest.json.JSONArray;
-import kong.unirest.json.JSONException;
-import kong.unirest.json.JSONObject;
-import org.apache.http.client.utils.URIBuilder;
+import kong.unirest.core.json.JSONArray;
+import kong.unirest.core.json.JSONException;
+import kong.unirest.core.json.JSONObject;
+import org.apache.hc.core5.net.URIBuilder;
 import org.apache.lucene.queryparser.flexible.core.nodes.QueryNode;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
-import org.jsoup.select.Elements;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -75,13 +76,13 @@ public class SemanticScholar implements FulltextFetcher, PagedSearchBasedParserF
                 String source = SOURCE_ID_SEARCH + doi.get().getDOI();
                 var jsoupRequest = Jsoup.connect(getURLBySource(source))
                                         .userAgent(URLDownload.USER_AGENT)
+                                        .header("Accept", "text/html; charset=utf-8")
                                         .referrer("https://www.google.com")
                                         .ignoreHttpErrors(true);
                 importerPreferences.getApiKey(getName()).ifPresent(
                         key -> jsoupRequest.header("x-api-key", key));
                 html = jsoupRequest.get();
-            } catch (
-                    IOException e) {
+            } catch (IOException e) {
                 LOGGER.info("Error for pdf lookup with DOI");
             }
         }
@@ -95,6 +96,7 @@ public class SemanticScholar implements FulltextFetcher, PagedSearchBasedParserF
             var jsoupRequest = Jsoup.connect(getURLBySource(source))
                                     .userAgent(URLDownload.USER_AGENT)
                                     .referrer("https://www.google.com")
+                                    .header("Accept", "text/html; charset=utf-8")
                                     .ignoreHttpErrors(true);
             importerPreferences.getApiKey(getName()).ifPresent(
                     key -> jsoupRequest.header("x-api-key", key));
@@ -104,20 +106,16 @@ public class SemanticScholar implements FulltextFetcher, PagedSearchBasedParserF
             return Optional.empty();
         }
 
-        // Retrieve PDF link from button on the webpage
-        // First checked is a drop-down menu, as it has the correct URL if present
-        // Else take the primary button
-        Elements metaLinks = html.getElementsByClass("flex-item alternate-sources__dropdown");
-        String link = metaLinks.select("a").attr("href");
-        if (link.length() < 10) {
-            metaLinks = html.getElementsByClass("flex-paper-actions__button--primary");
-            link = metaLinks.select("a").attr("href");
+        var metaTag = html.selectFirst("meta[name=citation_pdf_url]");
+        if (metaTag == null) {
+            return Optional.empty();
         }
-        if (link.isBlank()) {
+        String link = metaTag.attr("content");
+        if (StringUtil.isNullOrEmpty(link)) {
             return Optional.empty();
         }
         LOGGER.info("Fulltext PDF found @ SemanticScholar. Link: {}", link);
-        return Optional.of(new URL(link));
+        return Optional.of(URI.create(link).toURL());
     }
 
     @Override
@@ -136,15 +134,16 @@ public class SemanticScholar implements FulltextFetcher, PagedSearchBasedParserF
     }
 
     @Override
-    public URL getURLForQuery(QueryNode luceneQuery, int pageNumber) throws URISyntaxException, MalformedURLException, FetcherException {
+    public URL getURLForQuery(QueryNode luceneQuery, int pageNumber) throws URISyntaxException, MalformedURLException {
         URIBuilder uriBuilder = new URIBuilder(SOURCE_WEB_SEARCH);
         uriBuilder.addParameter("query", new DefaultQueryTransformer().transformLuceneQuery(luceneQuery).orElse(""));
         uriBuilder.addParameter("offset", String.valueOf(pageNumber * getPageSize()));
         uriBuilder.addParameter("limit", String.valueOf(Math.min(getPageSize(), 10000 - pageNumber * getPageSize())));
         // All fields need to be specified
         uriBuilder.addParameter("fields", "paperId,externalIds,url,title,abstract,venue,year,authors");
-        LOGGER.debug("URL for query: {}", uriBuilder.build().toURL());
-        return uriBuilder.build().toURL();
+        URL result = uriBuilder.build().toURL();
+        LOGGER.debug("URL for query: {}", result);
+        return result;
     }
 
     /**
